deploy/base/knative/serving/net-istio/peerauthentication.net-istio-webhook.k8s.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "net-istio-webhook"
  namespace: "knative-serving"
  labels:
    app.kubernetes.io/component: net-istio
    app.kubernetes.io/name: knative-serving
    app.kubernetes.io/version: "1.1.0"
    networking.knative.dev/ingress-provider: istio
    serving.knative.dev/release: "v1.1.0"
spec:
  selector:
    matchLabels:
      app: net-istio-webhook
  portLevelMtls:
    8443:
      mode: PERMISSIVE
