deploy/base/knative/serving/net-istio/gateway.knative-ingress-gateway.k8s.yaml
# Copyright 2019 The Knative Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# This is the shared Gateway for all Knative routes to use.
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: knative-ingress-gateway
  namespace: knative-serving
  labels:
    app.kubernetes.io/component: net-istio
    app.kubernetes.io/name: knative-serving
    app.kubernetes.io/version: "1.1.0"
    networking.knative.dev/ingress-provider: istio
    serving.knative.dev/release: "v1.1.0"
spec:
  selector:
    app.kubernetes.io/name: istio-ingressgateway
    # istio: ingressgateway
  servers:
    - port:
        name: http-host
        protocol: HTTP
        number: 8080
      hosts:
        - "*"
      tls:
        httpsRedirect: true
    - port:
        name: https-host
        protocol: HTTPS
        number: 8443
      hosts:
        - "*"
      tls:
        mode: SIMPLE
        credentialName: seankhliao-com-tls
