deploy/base/knative/serving/net-istio/gateway.knative-local-gateway.k8s.yaml
# Copyright 2019 The Knative Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# A cluster local gateway to allow pods outside of the mesh to access
# Services and Routes not exposing through an ingress.  If the users
# do have a service mesh setup, this isn't required.
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: knative-local-gateway
  namespace: knative-serving
  labels:
    app.kubernetes.io/component: net-istio
    app.kubernetes.io/name: knative-serving
    app.kubernetes.io/version: "1.1.0"
    networking.knative.dev/ingress-provider: istio
    serving.knative.dev/release: "v1.1.0"
spec:
  selector:
    app.kubernetes.io/name: istio-ingressgateway
    # istio: ingressgateway
  servers:
    - port:
        name: http
        protocol: HTTP
        number: 8081
      hosts:
        - "*"
