deploy/base/knative/serving/net-istio/mutatingwebhookconfiguration.webhook.istio.networking.internal.knative.dev.k8s.yaml
# Copyright 2020 The Knative Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: webhook.istio.networking.internal.knative.dev
  labels:
    app.kubernetes.io/component: net-istio
    app.kubernetes.io/name: knative-serving
    app.kubernetes.io/version: "1.1.0"
    networking.knative.dev/ingress-provider: istio
    serving.knative.dev/release: "v1.1.0"
webhooks:
  - name: webhook.istio.networking.internal.knative.dev
    admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: net-istio-webhook
        namespace: knative-serving
    failurePolicy: Fail
    objectSelector:
      matchExpressions:
        - key: "serving.knative.dev/configuration"
          operator: Exists
    sideEffects: None
